boreal/tests/assets/invalid_files/parsing/str_to_int_range2.yar
rule a {
    strings:
        $a = { AB [0-100000000000000000000000] CD }
    condition:
        $a
}
